deploy/1.0/kustomize/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudtype
  labels:
    cloudtype.io/role: system
