deploy/1.0/kustomize/mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    service: cloudtype
    app: cloudtype
    module: mongodb
spec:
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
  selector:
    service: cloudtype
    app: cloudtype
    module: mongodb
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    service: cloudtype
    app: cloudtype
    module: mongodb
spec:
  selector:
    matchLabels:
      service: cloudtype
      app: cloudtype
      module: mongodb
  strategy:
    type: Recreate
  progressDeadlineSeconds: 600
  template:
    metadata:
      labels:
        service: cloudtype
        app: cloudtype
        module: mongodb
    spec:
      volumes:
        - name: mongo-volume
          persistentVolumeClaim:
            claimName: pvc-mongo
      containers:
        - name: mongo
          image: mongo:5.0
          imagePullPolicy: IfNotPresent
          # env:
          #   - name: MONGO_INITDB_ROOT_USERNAME
          #     valueFrom:
          #       secretKeyRef:
          #         name: cloudtype-secrets
          #         key: MONGODB_USERNAME
          #   - name: MONGO_INITDB_ROOT_PASSWORD
          #     valueFrom:
          #       secretKeyRef:
          #         name: cloudtype-secrets
          #         key: MONGODB_PASSWORD
          #   - name: MONGO_INITDB_DATABASE
          #     valueFrom:
          #       secretKeyRef:
          #         name: cloudtype-secrets
          #         key: MONGODB_DATABASE
          ports:
            - containerPort: 27017
              protocol: TCP
          resources:
            requests:
              cpu: 20m
              memory: 256Mi
          volumeMounts:
            - name: mongo-volume
              mountPath: /data/db
              subPath: data
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      securityContext:
        fsGroupChangePolicy: OnRootMismatch
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: purpose
                    operator: In
                    values:
                      - system
      tolerations:
        - operator: Exists
          effect: NoExecute
        - operator: Exists
          effect: NoSchedule
      enableServiceLinks: false
